# dqix

./: .buildinfo  .gitignore  .gitmessage  .pre-commit-config.yaml  ARCHITECTURE_ANALYSIS.html  CLAUDE.md  CODE_OF_CONDUCT.md  COMMIT_RULES.md  CONTRIBUTING.md  DASHBOARD_IMPROVEMENTS.html  DOMAIN_QUALITY_INDEX_PRINCIPLES.html  DQIX_EDGE_CASE_DEBUG_REPORT.md  Dockerfile  ENHANCED_CLI_SUMMARY.md  FAQ.html  FINAL_SUMMARY.md  IMPROVEMENT_SUMMARY.md  LICENSE  Makefile  POLYGLOT_PUBLISHING_GUIDE.md  POLYGLOT_STATUS_SUMMARY.md  PRINCIPAL.md  PROJECT_STATUS.md  RECOMMENDATIONS.html  REFACTORING_GUIDE.html  REFACTORING_SUMMARY.md  SCORING.html  SECURITY.md  USER_MANUAL.html  dqi_multi.py  dqi_v1.py  dqi_v2.py  dqi_v3.py  genindex.html  index.html  objects.inv  pyproject.toml  readme.md  search.html  searchindex.js  (+4 more)
.cursor/rules/: principal.mdc
.doctrees/: ARCHITECTURE_ANALYSIS.doctree  DASHBOARD_IMPROVEMENTS.doctree  DOMAIN_QUALITY_INDEX_PRINCIPLES.doctree  FAQ.doctree  RECOMMENDATIONS.doctree  REFACTORING_GUIDE.doctree  SCORING.doctree  USER_MANUAL.doctree  environment.pickle  index.doctree
.doctrees/architecture/: DOMAIN_QUALITY_MEASUREMENT.doctree
.doctrees/guides/: academic-references.doctree
.doctrees/implementation/: IMPLEMENTATION_ROADMAP.doctree
.doctrees/reports/: CONSISTENCY_REPORT.doctree  CROSS_LANGUAGE_VALIDATION_REPORT.doctree  OPTIMIZATION_REPORT.doctree
.doctrees/specifications/: PROBE_INTERFACE_SPECIFICATION.doctree
.dqix_assessments/: bot.co.th_2025-06-26T02:29:46.401436.json  bulk_assessment_2025-06-26T13:59:39.675084.json  bulk_assessment_2025-06-26T14:20:04.707646.json  bulk_assessment_2025-06-26T14:29:08.635946.json  bulk_assessment_2025-06-26T14:36:36.929264.json  bulk_assessment_2025-06-26T15:12:54.946521.csv  cloudflare.com_2025-06-26T06:58:28.044837.json  example.com_2025-06-26T01:53:57.799861.json  example.com_2025-06-26T02:03:02.481977.json  example.com_2025-06-26T08:37:50.187056.json  example.org_2025-06-26T06:58:37.174438.json  github.com_2025-06-26T02:02:41.502853.json  github.com_2025-06-26T14:29:34.185503.json  google.com_2025-06-26T02:02:39.624542.json  httpbin.org_2025-06-26T06:58:30.537541.json  httpstat.us_2025-06-26T06:58:34.910871.json  jsonplaceholder.typicode.com_2025-06-26T06:58:31.996965.json  microsoft.com_2025-06-26T06:58:27.212201.json  nonexistent-domain-12345.com_2025-06-26T02:02:42.700592.json  scb.co.th_2025-06-26T02:29:32.858537.json  stackoverflow.com_2025-06-26T02:03:12.333093.json  stackoverflow.com_2025-06-26T14:29:40.386398.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  probe_proposal.md
.github/workflows/: ci-cd-2025.yml  ci.yml  docs.yml  publish.yml  test.yml
_downloads/3b423627fe21976c3c06e60f78e14ae1/: LICENSE
_sources/: ARCHITECTURE_ANALYSIS.md.txt  DOMAIN_QUALITY_INDEX_PRINCIPLES.md.txt  FAQ.md.txt  RECOMMENDATIONS.md.txt  REFACTORING_GUIDE.md.txt  index.md.txt
_sources/guides/: academic-references.md.txt
_sources/implementation/: IMPLEMENTATION_ROADMAP.md.txt
_sources/reports/: CROSS_LANGUAGE_VALIDATION_REPORT.md.txt  OPTIMIZATION_REPORT.md.txt
architecture/: DOMAIN_QUALITY_MEASUREMENT.html
benchmarks/: README.md  compare_languages.py  run_benchmarks.py
benchmarks/data/: test_domains.txt
config/: dqix-config-schema.yaml  dqix-config.yaml
docs/: DASHBOARD_IMPROVEMENTS.md  DOMAIN_QUALITY_INDEX_PRINCIPLES.md  FAQ.md  SCORING.md  USER_MANUAL.md  conf.py  index.md  requirements.txt
docs/architecture/: DOMAIN_QUALITY_MEASUREMENT.md
docs/reports/: CONSISTENCY_REPORT.md
docs/specifications/: CROSS_LANGUAGE_TEST_SPECIFICATION.yaml  PROBE_INTERFACE_SPECIFICATION.md  TEST_DOMAINS.yaml
dqix/: README.md  __init__.py  __main__.py  cli.py  cli_args.py  output.py  runner.py
dqix-cli/: README.md  dqix  dqix-multi  dqix-unified
dqix-cli/lib/: core.sh  dqix.sh  output.sh
dqix-go/: go.mod  go.sum
dqix-haskell/: Main.hi  Main.hs  Makefile  README.md  Test.hs  dqix.cabal
dqix-haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dqix-haskell/src/Config/: SharedConfig.hs
dqix-reports/: test.example.com_20250627_011800.json
dqix-rust/: Cargo.toml
dqix-rust/src/: cli.rs  core.rs  main.rs  probes.rs
dqix-rust/src/dsl/: mod.rs
dqix-rust/src/output/: csv.rs  json.rs  mod.rs  report.rs
dqix/application/: __init__.py  use_cases.py
dqix/cli/: base.py  commands.py  main.py
dqix/core/: __init__.py  cache.py  levels.py  mixins.py  probes.py  probes_improved.py  scoring.py
dqix/domain/: __init__.py  entities.py  repositories.py  services.py
dqix/dqix.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dsl/: enhanced_probe_definition.yaml  probe_definition_language.yaml
examples/: advanced_bulk_assessment.py  bulk_assessment_demo.py  domain_assessment_demo.py  probe_demo.py  refactoring_demo.py  sample_domains.txt  technical_details_demo.py  visualization_demo.py
guides/: academic-references.html
implementation/: IMPLEMENTATION_ROADMAP.html
kubernetes/: configmap.yaml  deployment.yaml  namespace.yaml  service.yaml
python/: pyproject.toml
reports/: CONSISTENCY_REPORT.html  CROSS_LANGUAGE_VALIDATION_REPORT.html  OPTIMIZATION_REPORT.html
scripts/: clean-dev.sh  comprehensive_sector_test.sh  create_sub_repos.sh  pre-commit-clean.sh  validate_external_config.py
specifications/: PROBE_INTERFACE_SPECIFICATION.html
templates/: perfect_security_config.yaml
tests/: README.md  __init__.py  conftest.py  cross_language_test.py  cross_language_validation.py  test_all_features.py  test_all_languages.py  test_basic.py  test_caa.py  test_cli.py  test_cli_levels.py  test_components.py  test_comprehensive_compliance.py  test_comprehensive_coverage.py  test_comprehensive_governance.py  test_dkim.py  test_dnssec.py  test_domain_diversity.py  test_e2e.py  test_engine.py  test_feature_parity.py  test_functional_core.py  test_headers.py  test_integration.py  test_integration_new.py  test_mail.py  test_probes.py  test_real_domains.py  test_refactored_components.py  test_sri.py  test_tls.py  test_whois.py
(+117 files in other folders)
