cabal-version: 2.4
name: dqix
version: 1.0.0
synopsis: Domain Quality Index - Internet Observability Platform

executable dqix
    default-language: Haskell2010
    main-is: Main.hs
    build-depends:
        base >=4.14 && <5,
        text >=1.2 && <2.1,
        containers >=0.6 && <0.7,
        time >=1.9 && <1.13

test-suite dqix-test
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    main-is: Test.hs
    build-depends:
        base >=4.14 && <5,
        text >=1.2 && <2.1,
        containers >=0.6 && <0.7,
        HUnit >=1.6 && <1.7,
        QuickCheck >=2.14 && <2.15 