[package]
name = "dqix-rust"
version = "2.0.0"
edition = "2021"
rust-version = "1.75"
authors = ["DQIX Team <team@dqix.org>"]
description = "Domain Quality Index - Modern Rust Implementation with 2025 Best Practices"
license = "MIT"
repository = "https://github.com/dqix-org/dqix"
homepage = "https://github.com/dqix-org/dqix"
keywords = ["domain", "security", "quality", "assessment", "monitoring"]
categories = ["network-programming", "command-line-utilities", "web-programming"]
exclude = ["*.tmp", "target/"]

[dependencies]
# CLI and UI - Updated for 2025
clap = { version = "4.5", features = ["derive", "color", "cargo"] }
colored = "2.1"
indicatif = "0.17"
ratatui = "0.28"
crossterm = "0.28"

# Async runtime and networking - Latest versions
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "multipart"] }
trust-dns-resolver = "0.23"
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"

# TLS and crypto - Latest security standards
rustls = "0.23"
webpki-roots = "0.26"
ring = "0.17"

# Serialization and config - Updated
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling - Enhanced
anyhow = "1.0"
thiserror = "1.0"
eyre = "0.6"
miette = { version = "7.2", features = ["fancy"] }

# Performance and memory management
dashmap = "6.0"
rayon = "1.10"
once_cell = "1.19"
smallvec = "1.13"
tinyvec = "1.8"
ahash = "0.8"

# Utilities - Modern Rust ecosystem
url = "2.5"
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1.10", features = ["v4", "fast-rng"] }
base64 = "0.22"
bytes = "1.7"
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.13"
wiremock = "0.6"
tempfile = "3.12"
serial_test = "3.1"

[[bin]]
name = "dqix"
path = "src/main.rs"

[[bin]]
name = "demo_external_config"
path = "src/bin/demo_external_config.rs"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true

[profile.dev]
opt-level = 1
debug = true

[profile.test]
opt-level = 2
debug = true

# Modern Rust features and lints
[lints.rust]
unsafe_code = "forbid"
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn" 