[tool.poetry]
name = "dqix"
version = "1.0.0"
description = "Domain Quality Index (DQIX) - Internet Observability Platform"
authors = ["phoneee <phoneee@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/phoneee/dqix"
repository = "https://github.com/phoneee/dqix"
documentation = "https://dqix.readthedocs.io"
keywords = ["security", "domain", "assessment", "internet", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]
packages = [{include = "dqix"}]

[tool.poetry.scripts]
dqix = "dqix.interfaces.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.12.0"}
rich = "^13.7.0"
httpx = "^0.27.0"
dnspython = "^2.6.0"
cryptography = "^42.0.0"
pydantic = "^2.7.0"
asyncio = "^3.4.3"
aiohttp = "^3.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
black = "^24.4.0"
ruff = "^0.5.0"
mypy = "^1.10.0"

[tool.poetry.group.export]
optional = true

[tool.poetry.group.export.dependencies]
weasyprint = "^62.0"
matplotlib = "^3.9.0"
plotly = "^5.22.0"

[tool.poetry.group.dashboard]
optional = true

[tool.poetry.group.dashboard.dependencies]
flask = "^3.0.0"
dash = "^2.17.0"
dash-bootstrap-components = "^1.6.0"
pandas = "^2.2.0"

[tool.poetry.group.visualization]
optional = true

[tool.poetry.group.visualization.dependencies]
# Cutting-edge data visualization
plotly = "^5.22.0"
bokeh = "^3.5.0"
altair = "^5.3.0"
seaborn = "^0.13.0"
d3blocks = "^1.2.0"
streamlit = "^1.38.0"
gradio = "^4.44.0"
panel = "^1.4.0"

# 3D and animated visualizations
vispy = "^0.14.0"
pythreejs = "^2.4.0"
ipyvolume = "^0.6.0"

# Graph and network visualization
networkx = "^3.3"
pyvis = "^0.3.2"
graph-tool = "^2.58"

# Time series and real-time
prophet = "^1.1.5"
kats = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"